--- a/test_project_django5/pyproject.toml
+++ b/test_project_django5/pyproject.toml
@@ -3,13 +3,13 @@ name = "test-django5"
 version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = [
-    "django>=5.0",
-    "uvicorn[standard]",
+    "django~=5.2.7",
+    "uvicorn[standard]~=0.38.0",
     "posthog",
-    "pytest>=8.0",
-    "pytest-asyncio>=0.23",
-    "pytest-django>=4.0",
-    "httpx>=0.27",
+    "pytest~=8.4.2",
+    "pytest-asyncio~=1.2.0",
+    "pytest-django~=4.11.1",
+    "httpx~=0.28.1",
 ]
 
 [tool.uv.sources]
